--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -679,6 +679,80 @@
       "active": "Active",
       "missing": "Missing"
     },
+    "calculator": {
+      "button": "Calculator",
+      "button_short": "Calculator",
+      "title": "Rating Calculator",
+      "winner": "Match Winner",
+      "loser": "Match Loser",
+      "date": "Date",
+      "select_player": "Select player",
+      "search_player": "Search player...",
+      "no_player_found": "No player found.",
+      "cancel": "Cancel",
+      "calculate": "Calculate",
+      "result_title": "Rating Change Results",
+      "points": "points",
+      "fill_all_fields": "Please fill in all fields",
+      "players_not_found": "Selected players not found",
+      "info_button": "Calculation methodology",
+      "info_button_short": "Info",
+      "info_title": "Estonian Table Tennis Rating System",
+      "info_description": "This rating system is used to calculate rating point changes based on match results. The calculation depends on the rating difference between players and tournament coefficients.",
+      "basic_rules": "Basic Rules",
+      "when_higher_wins": "When higher rated player wins:",
+      "when_lower_wins": "When lower rated player wins:",
+      "lower_wins_formula": "Winner gains points, loser loses the same amount.",
+      "simple_rating_formula": "(Rating Difference + 5) ÷ 3",
+      "rating_diff": "Rating Difference",
+      "winner_points": "Winner (+X)",
+      "loser_points": "Loser (-X)",
+      "tournament_coeffs": "Tournament Coefficients",
+      "tournament": "Tournament",
+      "win_coeff": "Win Coefficient",
+      "loss_coeff": "Loss Coefficient",
+      "extra_points": "Extra Points - 1st Place",
+      "over_30": "over 30",
+      "detailed_rules": "Detailed Rating Calculation Rules",
+      "rating_change_calc": "Rating (Ra) and Weight (Ka) Change Calculation",
+      "sum_calculation": "Sum of win and loss values (absolute values)",
+      "win_sum": "Sum of win values: Hvs=ΣHv",
+      "loss_sum": "Sum of loss values: Hks=(ΣHk)*-1",
+      "rating_change_formula": "Rating change (ΔR) calculation",
+      "rating_formula": "ΔR = ((Hvs-Hks)*10) + Hvs*Coef / (Ka+Hvs+Hks)",
+      "coef_explanation": "Coef is the tournament importance coefficient. Each player from the rating top 10 participating in the tournament class adds one point, which are summed together. Maximum Coef value is 10.",
+      "coef_usage": "Tournament importance coefficient is used in Estonian individual and team championships.",
+      "weight_limit": "If initial weight (Ka) > 30, then weight value 30 is used in the formula.",
+      "final_rating": "Final rating (Rl) = Ra + ΔR",
+      "weight_change": "Weight change (ΔK) = Hvs + Hks",
+      "final_weight": "Final weight (Kl) = Ka + ΔK",
+      "new_player_rules": "New Player Rating and Weight Calculation",
+      "new_player_explanation": "If a player without initial rating participates in a tournament, they are assigned an initial rating (Ra).",
+      "initial_rating_method": "Initial rating is determined by finding the lowest rating of players who beat them and the highest rating of players they beat, then assigning the lower value.",
+      "max_initial_rating": "Maximum initial rating is limited to 55. This limit does not apply to foreign players.",
+      "foreign_bonus": "If a foreign player wins all games, +5 is added to their initial rating.",
+      "new_player_formula": "New player formula: ΔR = (Hvs-2*Hks-2)*10) + Hvs*Coef / (Hvs+Hks)",
+      "weight_correction": "Weight Correction",
+      "weight_correction_high": "If Ka > 10: Corrected monthly on the 1st day before calculating new month results",
+      "weight_correction_formula_high": "Ku = Ka - (Ka * Ka) / 225",
+      "weight_correction_low": "If Ka < 11: Corrected every three months on the 1st day",
+      "weight_correction_formula_low": "Ku = Ka - 1",
+      "ranking_compilation": "Ranking Compilation",
+      "placement_points": "Ranking is compiled based on placement points (P), where Rl is rating points and Ku is corrected weights.",
+      "placement_formula": "Placement point change (ΔP) = (Rl - (3 * Ku)) / 6",
+      "placement_calc": "If ΔP > 0 then P = Rl - ΔP, If ΔP <= 0 then P = Rl",
+      "ranking_dropout": "Ranking Dropout",
+      "dropout_rule": "Player drops out of ranking if Rl + (10 * Ku) < 100, except if they played in a rating tournament within 180 days.",
+      "points_retention": "When dropping out, player's rating points (Rl) are not lost.",
+      "general_rules": "General Rules",
+      "rounding_rule": "Non-integer roundings follow standard rounding rules.",
+      "walkover_rule": "Only the first walkover (W.O.) victory counts, others must be removed from input file.",
+      "games_rule": "Input file may only contain games between two players. Matches/rounds with absent opponents ('bye') must be removed.",
+      "calculation_schedule": "Rating is calculated on the 1st day of each month including all previous month competitions.",
+      "publication_rule": "Rating is generated by ELTL authorized person and published within 10 days on ELTL website.",
+      "api_availability": "Rating is available for third-party integration via web query in XML format.",
+      "tournament_fee": "Tournament entry fee is set by ELTL board."
+    },
     "player_modal": {
       "basic_information": {
         "birthyear": "Birth Year",
