--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -992,7 +992,7 @@
         "round_robin_content": "Participants added here will be split into round robin subgroups.",
         "double_elimination_content": "Participants visible here will be playing in the main bracket.",
         "players": "unpaired players",
-        "pairs": "Pairs"
+        "pairs": "pairs"
       },
       "groups": {
         "layout": {
