--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -578,6 +578,7 @@
       "standings": "Kohad",
       "results": "Tabelid",
       "participants": "Osalejad",
+      "tables": "Lauad",
       "gallery": "Galerii",
       "guide": "Juhend",
       "sponsors": "Sponsorid",
@@ -1021,7 +1022,7 @@
         "start_date": "Alguskuupäev",
         "location": "Asukoht",
         "location_placeholder": "Sisestage asukoht",
-        "category": "Kategooria",
+        "category": "Kategooria (valikuline)",
         "category_placeholder": "Sisestage kategooria",
         "number_of_tables": "Laudade arv",
         "number_of_tables_placeholder": "Sisestage laudade arv",
@@ -1394,17 +1395,25 @@
           "round": "Ring",
           "class": "Grupp",
           "table": "Laud",
-          "participant_1": "Osaleja 1",
-          "participant_2": "Osaleja 2",
-          "participant_1_score": "Osaleja 1 tulemus",
-          "participant_2_score": "Osaleja 2 tulemus",
+          "confirm": "Kinnita",
+          "participant_1": "P1",
+          "participant_2": "P2",
+          "participant_1_score": "P1 Setid",
+          "participant_2_score": "P2 Setid",
           "winner_bracket": "Plussring",
           "loser_bracket": "Miinusring",
           "winner_placement": "Võitja koht",
           "loser_placement": "Kaotaja koht",
           "winner": "Võitja"
         },
-        "not_played": "Mängimata"
+        "not_played": "Mängimata",
+        "score_updated_success": "Mängu tulemus edukalt uuendatud",
+        "score_update_error": "Mängu tulemuse uuendamine ebaõnnestus",
+        "legend": {
+          "upcoming": "Tulevased",
+          "ongoing": "Käimasolevad",
+          "finished": "Lõppenud"
+        }
       },
       "brackets": {
         "not_found": "Turniiri tabelit ei leitud",
@@ -1431,6 +1440,10 @@
       "description": "Halda kõiki uudiseid siin",
       "add_new": "Uus postitus",
       "delete": "Kustuta",
+      "choose_category": "Vali kategooria",
+      "save_draft": "Salvesta mustandina",
+      "save_public": "Avalikusta",
+      "back": "Tagasi",
       "text": "Alusta esimese blogipostitusega",
       "search": "Otsi blogipostitust...",
       "status_published": "Avaldatud",
