--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -4,7 +4,8 @@
   },
   "common": {
     "cancel": "Katkesta",
-    "confirm": "Kinnita"
+    "confirm": "Kinnita",
+    "close": "Sulge"
   },
   "navbar": {
     "language": {
@@ -65,6 +66,18 @@
       "name": "Nimi",
       "date": "Kuupäev",
       "location": "Asukoht"
+    },
+    "pdf": {
+      "preview": {
+        "title": "PDF printimine",
+        "howToCreate": {
+          "title": "Kuidas luua PDF:",
+          "step1": "Klõpsa all \"Ava prindivaade\"",
+          "step2": "Uues aknas klõpsa \"Salvesta PDF\"",
+          "step3": "Kasuta oma veebilehitseja prindimenüüd PDF-i salvestamiseks"
+        },
+        "openPreview": "Ava prindivaade"
+      }
     },
     "news": {
       "name": "Uudised",
@@ -1049,7 +1062,9 @@
         "ranking": "Reitinguga turniir",
         "ranking_description": "Reiting arvutatakse iga esmaspäeva hommikul",
         "team": "Meeskondadega turniir",
-        "team_description": "Luba meeskondadega turniir"
+        "team_description": "Luba meeskondadega turniir",
+        "main_bracket": "Põhitabel",
+        "main_bracket_placeholder": "Vali Põhitabeli formaat"
       },
       "tables": {
         "no_tables": "Laudu pole veel lisatud",
@@ -1126,7 +1141,8 @@
           "class": "Grupi nimi on kohustuslik",
           "type": "Turniiri tüüp on kohustuslik",
           "min_team_size": "Minimaalne tiimi suurus on 2",
-          "dialog_type": "Tiimi tüübi valik on nõutud"
+          "dialog_type": "Tiimi tüübi valik on nõutud",
+          "second_class": "Põhitabeli formaat on nöutud"
         },
         "solo": "Üksik",
         "team": "Meeskondadega",
@@ -1263,6 +1279,7 @@
             "team_name_placeholder": "Lisa meeskonna nimi",
             "name_placeholder": "Nimi",
             "generate_pairs": "Genereeri Paarid",
+            "generate_subgroups": "Genereeri Alagrupid",
             "download_template": "Laadi alla Excel mall",
             "import_excel": "Impordi Excel",
             "add_player": {
@@ -1308,6 +1325,14 @@
             "pairs_participants_description": "Juba moodustatud paarismangu osalejad",
             "teams_merged_successfully": "Meeskonnad ühendati edukalt",
             "teams_merge_error": "Meeskondade ühendamisel tekkis viga"
+          },
+          "dynamic": {
+            "first_tab": "Alagrupid",
+            "second_tab": "Põhitabel",
+            "individual_participants": "Üksikosalejad",
+            "individual_participants_description": "Mängijad, keda pole veel paigutatud alagruppidesse",
+            "pairs_participants": "Alagrupid",
+            "pairs_participants_description": "Siin näed alagruppidesse paigutatud mängijaid"
           }
         }
       },
